# eda-ai-agent

./: .gitignore  LICENSE  README.md  eda_framework_plan.md  pyproject.toml  relatorio_eda.md  schema_summary.json  schema_summary.md
configs/: example.yaml
docs/: schema_workflow.md
outputs/: concentracao_olt_corrigida.md  scatter_A_perfil_100.html  scatter_A_perfil_50.html  scatter_B_comercial_100.html  scatter_B_comercial_50.html  seg_delta_por_tenure.html  seg_delta_por_velocidade.html  seg_painel_combinado.html  subA_comparativo_olts.html  subB_persistencia_efeito.html
outputs/profiles/: faturas_profile.html  incidentes_profile.html
scripts/: eda_full.py  eda_por_olt.py  gerar_tabelas_excel.py  run_eda.py  schema_inspector.py
scripts/eda/: __init__.py  concentration.py  html_report.py  loader.py  profiler.py  report.py  temporal.py
tests/: conftest.py  test_concentration.py  test_loader.py  test_profiler.py  test_temporal.py
transcricao/: Transcrição.md
